[gd_scene load_steps=131 format=2]

[ext_resource path="res://Sprites/Bob/Idle/Idle0024.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Bob/Idle/Idle0009.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Bob/Idle/Idle0010.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Bob/Idle/Idle0011.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Bob/Idle/Idle0013.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Bob/Idle/Idle0014.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Bob/Idle/Idle0015.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Bob/Idle/Idle0016.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Bob/Idle/Idle0017.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Bob/Idle/Idle0007.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Bob/Idle/Idle0012.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Bob/Idle/Idle0004.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Bob/Idle/Idle0003.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Bob/Idle/Idle0002.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Bob/Idle/Idle0001.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Bob/Idle/Idle0006.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Bob/Idle/Idle0005.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Bob/Idle/Idle0008.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Bob/Idle/Idle0019.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Bob/Idle/Idle0020.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Bob/Idle/Idle0022.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Bob/Idle/Idle0018.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Bob/Idle/Idle0021.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Bob/Idle/Idle0023.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Bob/Run/Run0018.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Bob/Run/Run0016.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Bob/Run/Run0017.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Bob/Run/Run0014.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Bob/Run/Run0015.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Bob/Run/Run0006.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Bob/Run/Run0001.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Bob/Run/Run0003.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Bob/Run/Run0004.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Bob/Run/Run0005.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Bob/Run/Run0007.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Bob/Run/Run0002.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Bob/Run/Run0008.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Bob/Run/Run0010.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Bob/Run/Run0012.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Bob/Run/Run0013.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Bob/Run/Run0009.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Bob/Run/Run0011.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Bob/Falling/Falling0011.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Bob/Falling/Falling0013.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Bob/Falling/Falling0007.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Bob/Falling/Falling0008.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Bob/Falling/Falling0009.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Bob/Falling/Falling0010.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Bob/Falling/Falling0012.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Bob/Falling/Falling0014.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Bob/Falling/Falling0015.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Bob/Falling/Falling0017.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Bob/Falling/Falling0016.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Bob/Falling/Falling0035.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Bob/Falling/Falling0044.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Bob/Falling/Falling0018.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Bob/Falling/Falling0020.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Bob/Falling/Falling0028.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Bob/Falling/Falling0033.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Bob/Falling/Falling0041.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Bob/Falling/Falling0039.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Bob/Falling/Falling0038.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Bob/Falling/Falling0019.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Bob/Falling/Falling0027.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Bob/Falling/Falling0034.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Bob/Falling/Falling0023.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Bob/Falling/Falling0029.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Bob/Falling/Falling0031.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Bob/Falling/Falling0037.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Bob/Falling/Falling0042.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Bob/Falling/Falling0032.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Bob/Falling/Falling0024.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Bob/Falling/Falling0036.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Bob/Falling/Falling0026.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Bob/Falling/Falling0021.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Bob/Falling/Falling0022.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Bob/Falling/Falling0040.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Bob/Falling/Falling0043.png" type="Texture" id=79]
[ext_resource path="res://Sprites/Bob/Falling/Falling0030.png" type="Texture" id=80]
[ext_resource path="res://Sprites/Bob/Falling/Falling0025.png" type="Texture" id=81]
[ext_resource path="res://Sprites/Bob/Falling/Falling0003.png" type="Texture" id=82]
[ext_resource path="res://Sprites/Bob/Falling/Falling0006.png" type="Texture" id=83]
[ext_resource path="res://Sprites/Bob/Falling/Falling0002.png" type="Texture" id=84]
[ext_resource path="res://Sprites/Bob/Falling/Falling0001.png" type="Texture" id=85]
[ext_resource path="res://Sprites/Bob/Falling/Falling0004.png" type="Texture" id=86]
[ext_resource path="res://Sprites/Bob/Falling/Falling0005.png" type="Texture" id=87]
[ext_resource path="res://Audio/SFX/Bob/wallslide.ogg" type="AudioStream" id=88]
[ext_resource path="res://Audio/SFX/Bob/jump.ogg" type="AudioStream" id=89]
[ext_resource path="res://Audio/SFX/Bob/walk.ogg" type="AudioStream" id=90]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0003.png" type="Texture" id=91]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0005.png" type="Texture" id=92]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0001.png" type="Texture" id=93]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0004.png" type="Texture" id=94]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0006.png" type="Texture" id=95]
[ext_resource path="res://Sprites/Bob/WallSlide/WallSlide0002.png" type="Texture" id=96]
[ext_resource path="res://Sprites/Bob/Land/Land0006.png" type="Texture" id=97]
[ext_resource path="res://Sprites/Bob/Land/Land0007.png" type="Texture" id=98]
[ext_resource path="res://Sprites/Bob/Land/Land0001.png" type="Texture" id=99]
[ext_resource path="res://Sprites/Bob/Land/Land0002.png" type="Texture" id=100]
[ext_resource path="res://Sprites/Bob/Land/Land0004.png" type="Texture" id=101]
[ext_resource path="res://Sprites/Bob/Land/Land0005.png" type="Texture" id=102]
[ext_resource path="res://Sprites/Bob/Land/Land0003.png" type="Texture" id=103]
[ext_resource path="res://Sprites/Bob/Land/Land0009.png" type="Texture" id=104]
[ext_resource path="res://Sprites/Bob/Land/Land0008.png" type="Texture" id=105]
[ext_resource path="res://Sprites/Bob/Land/Land0011.png" type="Texture" id=106]
[ext_resource path="res://Sprites/Bob/Land/Land0010.png" type="Texture" id=107]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20005.png" type="Texture" id=108]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20008.png" type="Texture" id=109]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20018.png" type="Texture" id=110]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20012.png" type="Texture" id=111]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20003.png" type="Texture" id=112]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20009.png" type="Texture" id=113]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20010.png" type="Texture" id=114]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20002.png" type="Texture" id=115]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20014.png" type="Texture" id=116]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20017.png" type="Texture" id=117]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20004.png" type="Texture" id=118]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20007.png" type="Texture" id=119]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20006.png" type="Texture" id=120]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20001.png" type="Texture" id=121]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20011.png" type="Texture" id=122]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20015.png" type="Texture" id=123]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20016.png" type="Texture" id=124]
[ext_resource path="res://Sprites/Bob/Falling2/Falling20013.png" type="Texture" id=125]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 26 ) ],
"loop": true,
"name": "run",
"speed": 24.0
}, {
"frames": [ ExtResource( 99 ), ExtResource( 100 ), ExtResource( 103 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 105 ), ExtResource( 104 ), ExtResource( 107 ), ExtResource( 106 ) ],
"loop": true,
"name": "land",
"speed": 24.0
}, {
"frames": [ ExtResource( 93 ), ExtResource( 96 ), ExtResource( 91 ), ExtResource( 94 ), ExtResource( 92 ), ExtResource( 95 ) ],
"loop": true,
"name": "wallslide",
"speed": 24.0
}, {
"frames": [ ExtResource( 85 ), ExtResource( 84 ), ExtResource( 82 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 83 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 44 ), ExtResource( 50 ), ExtResource( 45 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 57 ), ExtResource( 64 ), ExtResource( 58 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 67 ), ExtResource( 73 ), ExtResource( 81 ), ExtResource( 75 ), ExtResource( 65 ), ExtResource( 59 ), ExtResource( 68 ), ExtResource( 80 ), ExtResource( 69 ), ExtResource( 72 ), ExtResource( 60 ), ExtResource( 66 ), ExtResource( 55 ), ExtResource( 74 ), ExtResource( 70 ), ExtResource( 63 ), ExtResource( 62 ), ExtResource( 78 ), ExtResource( 61 ), ExtResource( 71 ), ExtResource( 79 ), ExtResource( 56 ) ],
"loop": true,
"name": "jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 121 ), ExtResource( 115 ), ExtResource( 112 ), ExtResource( 118 ), ExtResource( 108 ), ExtResource( 120 ), ExtResource( 119 ), ExtResource( 109 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 122 ), ExtResource( 111 ), ExtResource( 125 ), ExtResource( 116 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 117 ), ExtResource( 110 ) ],
"loop": false,
"name": "Fall",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10.782, 29.9928 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.185185, 0.562963 )
colors = PoolColorArray( 0.223633, 0.223633, 0.223633, 1, 0.239258, 0.239258, 0.239258, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 39.31
flatness = 0.24
gravity = Vector3( 0, 200, 0 )
initial_velocity = 68.97
initial_velocity_random = 0.37
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 4 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 14
script = ExtResource( 2 )
lerpVal = 0.25

[node name="Bob" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.246547, 2.04612 )
shape = SubResource( 2 )

[node name="wallslideA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 88 )

[node name="jumpA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 89 )
volume_db = -2.5

[node name="walkA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 90 )

[node name="LandingDust" type="Particles2D" parent="."]
position = Vector2( 0, 32 )
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="RunningDust" type="Particles2D" parent="."]
position = Vector2( 0, 32 )
emitting = false
amount = 20
explosiveness = 0.11
local_coords = false
process_material = SubResource( 5 )
__meta__ = {
"_editor_description_": ""
}
